tests/baselines/reference/es6ImportDefaultBindingDts.errors.txt
tests/cases/compiler/client.ts(2,12): error TS4025: Exported variable 'x' has or is using private name 'defaultBinding'.


==== tests/cases/compiler/server.ts (0 errors) ====
    
    class c { }
    export = c;
    
==== tests/cases/compiler/client.ts (1 errors) ====
    import defaultBinding from "server";
    export var x = new defaultBinding();
               ~
!!! error TS4025: Exported variable 'x' has or is using private name 'defaultBinding'.
    import defaultBinding2 from "server"; // elide this import since defaultBinding2 is not used
    